Se modifica componente btn-post agregando parametro opcional para modificar el texto del botòn

--- a/src/app/shared/btn-post/btn-post.component.html
+++ b/src/app/shared/btn-post/btn-post.component.html
@@ -9,6 +9,6 @@
     size="small"
   ></ion-spinner>
   <ng-template #texto>
-    <ion-text>Guardar</ion-text>
+    <ion-text>{{text}}</ion-text>
   </ng-template>
 </ion-button>
