Se modifica enlace

--- a/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/src/app/modules/auth/components/login-view/login-view.component.html
@@ -78,7 +78,7 @@
               <div class="ion-padding-top ion-padding-bottom ">
 
                 <ion-text >
-                  Nuevo en el sitio? <a href="registro">Crea una cuenta</a>
+                  Nuevo en el sitio? <a href="/#/registro">Crea una cuenta</a>
                 </ion-text>
               </div>
             </ion-card>
