profile, por ahora sólo propio y sin consultas

--- a/src/app/usuario/usuario.page.html
+++ b/src/app/usuario/usuario.page.html
@@ -6,7 +6,7 @@
           <ion-row>
             <ion-buttons>
               <ion-back-button
-                defaultHref="/perfil"
+                defaultHref="/perfil/editar"
                 class="ion-hide-md-up"
               ></ion-back-button>
             </ion-buttons>
