--- a/src/global.scss
+++ b/src/global.scss
@@ -85,16 +85,19 @@
   
 }
 
+.sombra {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
 .w-100 {
-  width: 100%;
+  width: 100% !important;
 }
 
 .h-100{
-  height: 100%;
+  height: 100% !important;
 }
 
 .expand-full{
-  width: 100%;
+  width: 100% !important;
 }
 
 ion-note{
