--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -385,6 +385,7 @@
                   size-sm="3"
                   class="ion-align-self-center"
                 >
+                <!-- [disabled]="!f.valid && ( (this.catI) == false  || (this.secI) == false )" -->
                   <app-btn-post
                     [posting]="posting"
                     [disabled]="!f.valid"
