--- a/src/app/usuario/perfil/perfil.page.html
+++ b/src/app/usuario/perfil/perfil.page.html
@@ -18,7 +18,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="isActive">
   <ion-card
     color="white"
     class="restrict-height"
@@ -30,7 +30,7 @@
           <ion-row class="ion-justify-content-center">
             <ion-col size="5">
               <app-usuario-img
-                [src]="configService.apiUrl(u.profile.img_url)"
+                [src]="configService.apiUrl( this.imgUrl )"
               ></app-usuario-img>
             </ion-col>
           </ion-row>
@@ -39,29 +39,25 @@
         <ion-col>
           <ion-row>
             <ion-text>
-              <h2>{{u.profile.name}} {{u.profile.last_name}}</h2></ion-text>
+              <h2>{{ this.name }}</h2></ion-text>
             <ion-text class="ion-no-padding" color="medium">
-              <p class="text-username">@{{ u.username }}</p></ion-text>
+              <p class="text-username">@{{ this.username }}</p></ion-text>
           </ion-row>
           <ion-row>
-            <ion-text>Rol: {{u.role.type}}</ion-text>
+            <ion-text>Rol: {{ this.role }}</ion-text>
           </ion-row>
           <ion-row>
-            <ion-text *ngIf="u.role_id == 3 || u.role_id == 2; else notEntidad"
-              >Fotoclub/Entidad: {{u.profile.fotoclub.name}}</ion-text
+            <ion-text
+              >Fotoclub/Entidad: {{ this.fotoclub }}</ion-text
             >
           </ion-row>
-          <ng-template #notEntidad>
-            <ion-text>Fotoclub/Entidad: Ninguna</ion-text>
-          </ng-template>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col size="4">
           <ion-row class="ion-justify-content-center">
-            <!--TODO: si el usuario soy yo mismo -->
-            <ion-button
-              [routerLink]="['/usuarios', 'editar', authService.userId]"
+            <ion-button *ngIf=" this.privilegies"
+              [routerLink]="['/usuarios', 'editar', this.userId]"
             >
               Editar perfil
             </ion-button>
@@ -72,25 +68,25 @@
             <ion-item class="ion-margin ion-text-center sombra" lines="none">
               <ion-col>
                 <ion-text>Concursos</ion-text>
-                <ion-title>1</ion-title>
+                <ion-title>{{this.estadisticas != undefined ? this.estadisticas.concursos : "0"}}</ion-title>
               </ion-col>
             </ion-item>
             <ion-item class=" ion-margin ion-text-center sombra" lines="none">
               <ion-col>
                 <ion-text>Fotografías</ion-text>
-                <ion-title>1</ion-title>
+                <ion-title>{{this.estadisticas != undefined ? this.estadisticas.fotografias : "0"}}</ion-title>
               </ion-col>
             </ion-item>
             <ion-item class=" ion-margin ion-text-center sombra" lines="none">
               <ion-col>
                 <ion-text>1° Puesto</ion-text>
-                <ion-title>1</ion-title>
+                <ion-title>{{this.estadisticas != undefined ? this.estadisticas.primer_puesto : "0"}}</ion-title>
               </ion-col>
             </ion-item>
             <ion-item class=" ion-margin ion-text-center sombra" lines="none">
               <ion-col>
                 <ion-text>Mención</ion-text>
-                <ion-title>1</ion-title>
+                <ion-title>{{this.estadisticas != undefined ? this.estadisticas.mencion : "0"}}</ion-title>
               </ion-col>
             </ion-item>
           </ion-row>
