--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,15 @@
   <ion-content>
     <!-- sidebar -->
     <app-sidebar *ngIf="!responsiveService.isDesktop"></app-sidebar>
+
     <ion-router-outlet id="main-content"></ion-router-outlet>
-    
-    
   </ion-content>
+  <ion-footer>
     <app-footer></app-footer>
+  </ion-footer>
+
+  <!-- <app-footer></app-footer> -->
+
   <!-- <ion-footer style="">
     <app-footer></app-footer>
   </ion-footer> -->
@@ -21,5 +25,4 @@
     </ion-toolbar>
   </ion-footer> -->
   <!-- </ion-split-pane> -->
-
 </ion-app>
