debugg ruta de imagenes en nulidad

--- a/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
+++ b/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
@@ -32,7 +32,7 @@
                 <ion-text color="dark">No se encuentra una fotografía cargada</ion-text>
               </ng-template>
               <ion-row class="ion-padding-top">
-                <ion-img (ionError)="yepImg = false"  *ngIf="yepImg==true; else noImg" [src]="configService.apiUrl(image.url)"></ion-img>
+                <ion-img (ionError)="yepImg = false"  *ngIf="yepImg==true; else noImg" [src]="image.url != null ? configService.apiUrl(image.url) : ''"></ion-img>
                
               </ion-row>
             </ion-col>
