--- a/src/app/info-centro/info-centro.page.html
+++ b/src/app/info-centro/info-centro.page.html
@@ -22,7 +22,7 @@
           <ion-img 
             (ionError)="noImg(avatarImg)"
          
-            [src]="configService.apiUrl(p.img_url)"
+            [src]="p.img_url != null ? configService.apiUrl(p.img_url) : '' "
           ></ion-img>
         </ion-avatar>
         <ion-row  class="ion-no-padding ion-justify-content-center ion-align-items-center">
