--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -163,7 +163,7 @@
                       >
                         <!-- user card -->
                         <ion-col size="3" size-sm="1.3">
-                          <app-usuario-img [src]="configService.apiUrl(m.img_url)"></app-usuario-img>
+                          <app-usuario-img [src]="m.img_url != null ? configService.apiUrl(m.img_url) : '' "></app-usuario-img>
                         </ion-col>
                         <ion-col size="8" size-sm="10.7">
                           <ion-label class="ion-margin-start">
