restricciones form de no elemento en img y concurso

--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -388,7 +388,7 @@
                 <!-- [disabled]="!f.valid && ( (this.catI) == false  || (this.secI) == false )" -->
                   <app-btn-post
                     [posting]="posting"
-                    [disabled]="!f.valid"
+                    [disabled]="!f.valid || secycat"
                   ></app-btn-post>
                   <!-- <ion-button
                     expand="block"
