se soluciona error sitio unsafe de footer

--- a/src/app/nav/footer/footer.component.html
+++ b/src/app/nav/footer/footer.component.html
@@ -11,10 +11,10 @@
     </ion-col>
       <ion-col >
         <ion-row class="ion-justify-content-center ion-align-items-center h-100">
-          <a href="{{footer.youtube}}" target="_blank" class="ion-margin-end"><ion-icon color="light" name="logo-youtube"> youtube</ion-icon></a>
-          <a href="{{footer.instagram}}" target="_blank" class="ion-margin-end"><ion-icon color="light" name="logo-instagram">Instagram </ion-icon> </a>
-          <a href=" {{footer.facebook}}" target="_blank" class="ion-margin-end"><ion-icon color="light" name="logo-facebook">Facebook </ion-icon></a>
-          <a href="mailto:{{footer.email}}" target="_blank" class="ion-margin-end"><ion-icon color="light" name="mail"> E-mail</ion-icon></a>
+          <a [href]="youUrl" target="_blank" class="ion-margin-end"><ion-icon color="light" name="logo-youtube"> youtube</ion-icon></a>
+          <a [href]="instagramUrl" target="_blank" class="ion-margin-end"><ion-icon color="light" name="logo-instagram">Instagram </ion-icon> </a>
+          <a [href]="faceUrl" target="_blank" class="ion-margin-end"><ion-icon color="light" name="logo-facebook">Facebook </ion-icon></a>
+          <a href="mailto:{{mailUrl}}" target="_blank" class="ion-margin-end"><ion-icon color="light" name="mail"> E-mail</ion-icon></a>
         </ion-row>
        
       </ion-col>
