--- a/src/app/info-centro/info-centro.page.scss
+++ b/src/app/info-centro/info-centro.page.scss
@@ -4,3 +4,8 @@ ion-avatar{
 }
 ion-avatar img{ width: 100% !important; height: 50vh !important; } 
 ion-img{ max-width: 100% !important; max-height: 50vh !important;  object-fit: cover;} 
+
+.bg-gray1{
+    background-color: #262626;
+    color: #fff;
+}
