En concursos se agrega campo subtitulo, se avanza con visualizacion de vista de ultimo concurso

--- a/src/app/info-centro/info-centro.page.html
+++ b/src/app/info-centro/info-centro.page.html
@@ -1,8 +1,8 @@
 <ion-content>
-  <ion-grid>
+  <ion-grid class="ion-no-padding">
     <!-- PRESENTACION ULTIMO CONCURSO-->
     <ion-row>
-      <app-presentacion-ultimo-concurso></app-presentacion-ultimo-concurso>
+      <app-presentacion-ultimo-concurso class="w-100"></app-presentacion-ultimo-concurso>
     </ion-row>
 
     <!-- CONTENERDEOR ICONOS/ACCESO DIRECTOS -->
@@ -32,12 +32,12 @@
     
     <!-- COMISIÒN DIRECTIVA -->
     <ion-row >
-      <app-presentacion-comision-directiva></app-presentacion-comision-directiva>
+      <app-presentacion-comision-directiva  class="w-100"></app-presentacion-comision-directiva>
     </ion-row>
 
     <!-- MIEMBROS -->
     <ion-row>
-      <app-presentacion-miembros></app-presentacion-miembros>
+      <app-presentacion-miembros  class="w-100"></app-presentacion-miembros>
     </ion-row>
 
     <!-- SUBSCRIBITE, igual ahora no se agrega -->
