--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -39,6 +39,11 @@
               <!-- </ion-col> -->
             </ion-item>
 
+            <ion-item>
+              <ion-label position="floating">Sub-título</ion-label>
+              <ion-input name="sub_title" [ngModel]="concurso.sub_title"></ion-input>
+            </ion-item>
+
             <!-- <ion-list>
               <ion-radio-group
                 [(ngModel)]="typeSubsection"
